--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
+    "react-router": "^7.1.5",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
